--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,15 @@ figcaption {
   color: black;
   text-decoration: none;
 }
+
+#details a:hover {
+  color: black;
+  text-decoration: underline;
+
+}
+
+#details a:active {
+  color: black;
+  text-decoration: underline;
+
+}
